--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 somefile.txt
-Lesson02_TIME_API_CONTINUE\.idea
-Lesson02_TIME_API_CONTINUE\out
+Lesson02_TIME_API_CONTINUE/.idea
+Lesson02_TIME_API_CONTINUE/out
